# wipi_game

./: Cargo.toml  README.md  build.rs  release.sh
.github/workflows/: release.yml  rust.yml
src/: data.rs  game.rs  main.rs
src/data/: parser.rs  types.rs
src/game/: combat.rs  dialog.rs  explore.rs  inventory.rs  menu.rs  player.rs  quest.rs  renderer.rs  save.rs  shop.rs  state.rs
